--- a/landingpage/src/Components/calls/calls.css
+++ b/landingpage/src/Components/calls/calls.css
@@ -12,8 +12,7 @@ body {
   font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
-  background-color: #f9f9f9;
+  color: var(--white);
 }
 
 /* Form Styles */
@@ -22,7 +21,7 @@ body {
   max-width: 1200px;
   margin: 40px auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: var(--dark-green-color);
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
