--- a/landingpage/src/Components/calls/calls.css
+++ b/landingpage/src/Components/calls/calls.css
@@ -30,7 +30,7 @@ body {
   display: grid;
   -webkit-box-align: stretch;
   box-sizing: border-box;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr, 1fr;
 }
 
 .lp_section-title {
@@ -49,7 +49,7 @@ body {
   box-sizing: border-box;
   position: relative;
   align-self: flex-start;
-  grid-column: 2;
+  grid-row-end: 2;
 }
 
 .lp_form input[type="text"],
@@ -106,6 +106,8 @@ body {
   flex: 1;
   align-self: inherit;
   width: 50%;
+  grid-row-start: 1;
+  
 }
 
 .white {
