--- a/landingpage/src/Components/services/services.css
+++ b/landingpage/src/Components/services/services.css
@@ -24,24 +24,52 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 33.33%;
-    padding: 0 20px;
+    width: 300px;
+    padding: 20px;
     box-sizing: border-box;
     text-align: center;
+    margin: 20px;
+    background-color: var(--white);
+    border-radius: 10px;
 }
 
 .service-item img {
-  height: auto;
+  height: 200px;
   max-width: 100%;
   margin-bottom: 20px;
   display: block;
+  border-radius: 10px;
 }
 
 .service-item h4 {
     font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: var(--dark-gray-color);
     margin-bottom: 10px;
+}
+
+.fas {
+    font-size: 20px;
+    color: var(--light-green-color);
+}
+
+.list-unstyled {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.list-unstyled li {
+  margin-bottom: 10px;
+}
+
+.list-unstyled li:before {
+  content: "";
+  display: inline-block;
+  width: 0.5rem;
+  height: 0.5rem;
+  margin-right: 10px;
+  background-color: var(--light-green-color);
 }
 
 .service-item p {
