--- a/landingpage/src/Components/intro/intro.css
+++ b/landingpage/src/Components/intro/intro.css
@@ -9,7 +9,7 @@
     font-size: 0.8125rem;
     font-weight: bold;
     color: var(--light-green-color);
-    margin-bottom: 20px;
+    margin-bottom: -10rem;
     text-transform: uppercase;
     text-align: left;
 }
