--- a/landingpage/src/Components/services/services.css
+++ b/landingpage/src/Components/services/services.css
@@ -50,6 +50,7 @@
   align-items: center;
   justify-content: center;
 }
+
 .service-item_2 .Book{
   margin-top: -1.19rem;
   background-image: url(../../assets/Book.jpg);
@@ -133,14 +134,24 @@
     color: var(--light-green-color);
     margin-right: 10px;
 }
+.lp_service-list-container ul li span, .price {
+    font-size: 1rem;
+    color: var(--light-green-color);
+    margin-right: 10px;
+    margin-bottom: 0.25rem;
+    font: 700;
+    margin-left: 5px;
+}
 
-.service-item h6 {
-    font-size: 16px;
+.service-item_1 h6, .service-item_2 h6, .service-item_3 h6 {
+    font-size: 1rem;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    
 }
 
 .service-item .price {
@@ -166,4 +177,74 @@
     background-color: transparent;
     color: var(--light-green-color);
     border: 1px solid var(--light-green-color);
+}
+
+.propositions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.propositions img {
+  background-image: url(../../assets/Mountain.jpg);
+  width: 50%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.propositions .content {
+  width: 50%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.propositions h3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: var(--dark-gray-color);
+  margin-bottom: 20px;
+}
+
+.propositions h4 {
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--dark-gray-color);
+  margin-bottom: 10px;
+  cursor: pointer;
+  display: inline-flex; 
+  align-items: center; 
+}
+
+.propositions h4.active {
+  color: var(--light-green-color);
+}
+
+.propositions .numbering {
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--dark-gray-color);
+  margin-right: 10px;
+  border: 1px solid var(--dark-gray-color);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease;
+}
+
+.propositions .numbering.active {
+  border-color: var(--light-green-color);
+  background-color: var(--light-green-color);
+  color: var(--white);
+}
+
+.propositions p {
+  font-size: 16px;
+  color: var(--dark-gray-color);
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
