--- a/landingpage/src/Components/services/services.scss
+++ b/landingpage/src/Components/services/services.scss
@@ -65,99 +65,93 @@
       margin-bottom: 20px;
 
       li {
-        margin: 0 10px;
         font-size: 14px;
         color: $dark-gray-color;
 
-        &:before {
-          color: $light-green-color;
+        span {
+          font-size: 0.5rem;
+          margin-right: 0.625rem;
         }
       }
     }
+  }
 
-    // .lp_service-list-container ul li span {
-    //   font-size: 20px;
-    //   color: $light-green-color;
-    //   margin-right: 10px;
-    // }
+  h6 {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    h6 {
+    .price {
       font-size: 1rem;
+      color: $light-green-color;
+      margin-right: 10px;
+      margin-bottom: 0.25rem;
       font-weight: bold;
-      color: #333;
-      margin-bottom: 20px;
-      display: flex;
+      margin-left: 5px;
+    }
+  }
+
+  button {
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    background-color: $light-green-color;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: transparent;
+      color: $light-green-color;
+      border: 1px solid $light-green-color;
+    }
+  }
+
+  .CC {
+    margin-top: -1.19rem;
+    height: 200px;
+    width: 300px;
+    background-size: cover;
+    border-radius: 10px;
+    background-image: url(../../assets/CC.jpeg);
+
+    &.service-item_1 {
       align-items: center;
-      justify-content: space-between;
-
-      .price {
-        font-size: 1rem;
-        color: $light-green-color;
-        margin-right: 10px;
-        margin-bottom: 0.25rem;
-        font-weight: bold;
-        margin-left: 5px;
-      }
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 5px;
-      background-color: $light-green-color;
-      color: #fff;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: transparent;
-        color: $light-green-color;
-        border: 1px solid $light-green-color;
-      }
-    }
-
-    .CC {
-      margin-top: -1.19rem;
-      height: 200px;
-      width: 300px;
-      background-size: cover;
-      border-radius: 10px;
-      background-image: url(../../assets/CC.jpeg);
-
-      &.service-item_1 {
-        align-items: center;
-        object-fit: contain;
-        justify-self: center;
-        margin-bottom: 1rem;
-      }
-    }
-
-    .Book {
-      margin-top: -1.19rem;
-      height: 200px;
-      width: 300px;
-      background-image: url(../../assets/Book.jpg);
-      margin-bottom: 20px;
-      display: block;
-      border-radius: 10px;
-    }
-
-    .Laptop {
-      margin-top: -1.19rem;
-      height: 200px;
-      width: 300px;
-      background-image: url(../../assets/Laptop.jpg);
-      margin-bottom: 20px;
-      display: block;
-      border-radius: 10px;
-      object-position: center;
       object-fit: contain;
-      background-size: cover;
-      align-items: start;
-      justify-content: start;
+      justify-self: center;
+      margin-bottom: 1rem;
     }
+  }
+
+  .Book {
+    margin-top: -1.19rem;
+    height: 200px;
+    width: 300px;
+    background-image: url(../../assets/Book.jpg);
+    margin-bottom: 20px;
+    display: block;
+    border-radius: 10px;
+  }
+
+  .Laptop {
+    margin-top: -1.19rem;
+    height: 200px;
+    width: 300px;
+    background-image: url(../../assets/Laptop.jpg);
+    margin-bottom: 20px;
+    display: block;
+    border-radius: 10px;
+    object-position: center;
+    object-fit: contain;
+    background-size: cover;
+    align-items: start;
+    justify-content: start;
   }
 }
 
