🪲progress bar & slider & projects

--- a/landingpage/src/Components/project/project.scss
+++ b/landingpage/src/Components/project/project.scss
@@ -20,7 +20,12 @@
 .section-title {
   margin-top: 50px;
   display: block;
-  font: 500 0.8125rem / 1.125rem "Montserrat", sans-serif;
+  font: {
+    weight: 500;
+    size: 0.8125rem;
+    line-height: 1.125rem;
+    family: "Montserrat", sans-serif;
+  }
   color: var(--light-green-color);
   margin-bottom: 0.5rem;
   text-transform: uppercase;
@@ -29,7 +34,12 @@
   .h3 {
     text-align: center;
     margin-bottom: 3.25rem;
-    font: 700 1.75rem / 2.125rem "Montserrat", sans-serif;
+    font: {
+      weight: 700;
+      size: 1.75rem;
+      line-height: 2.125rem;
+      family: "Montserrat", sans-serif;
+    }
     color: var(--dark-gray-color);
   }
 }
@@ -93,6 +103,8 @@
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .project-item-p-2 {
@@ -100,6 +112,7 @@
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .project-item-p-3 {
@@ -107,6 +120,7 @@
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .project-item-p-4 {
@@ -159,16 +173,28 @@
   text-align: center;
 
   h3 {
-    font: 700 1.75rem / 2.125rem "Montserrat", sans-serif;
+    font: {
+      weight: 700;
+      size: 1.75rem;
+      line-height: 2.125rem;
+      family: "Montserrat", sans-serif;
+    }
     margin-bottom: 0.75rem;
   }
 
   p {
     width: 65%;
-    margin-right: auto;
-    margin-left: auto;
+    margin: {
+      right: auto;
+      left: auto;
+    }
     text-align: center;
-    font: 400 1rem / 1.5625rem "Open Sans", sans-serif;
+    font: {
+      weight: 400;
+      size: 1rem;
+      line-height: 1.5625rem;
+      family: "Open Sans", sans-serif;
+    }
     margin-bottom: 3.5rem;
     color: var(--dark-gray-color);
   }
@@ -176,10 +202,30 @@
 
 .team-member-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.team-member {
+  display: table;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   margin-bottom: 4rem;
+  width: 25%;
+  padding: 0 2rem;
+}
+
+@keyframes hover-scale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+
+.square-container {
+  clip-path: inset(0 0 0 0);
 }
 
 .profile-picture {
@@ -189,4 +235,39 @@
   overflow: hidden;
   margin-bottom: 1rem;
   clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  transition: transform 0.3s ease;
+
+  &:hover {
+    animation: hover-scale 0.3s ease forwards;
+  }
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.social-links li {
+  font-size: 0.6875;
+  line-height: 1.75rem;
+  display: flex;
+  width: 2rem;
+  height: 2rem;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  background-color: var(--light-green-color);
+  color: var(--white);
+  padding: 0.52rem;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-right: 1rem;
+
+  &:hover {
+    background-color: var(--white);
+    color: var(--light-green-color);
+  }
 }
