--- a/landingpage/src/variables.module.scss
+++ b/landingpage/src/variables.module.scss
@@ -5,6 +5,7 @@ $dark-green-color: #113448;
 $light-green-color: #14bf98;
 $dark-gray-color: #484a46;
 $light-gray-color: #787976;
+$disabled-nav-content-color: #c1cace;
 $light-grey-border-color: #ebe8e8;
 $white: #ffffff;
 $disabled-color: #e9ecef;
